# fargo_utils

./: .gitignore  MANIFEST.in  README.md  compile.sh  fargo.yml  fargo_make.yml  fargo_run.yml  fung_make.yml  fung_run.yml  get_fargo3d.sh  guild.yml  requirements.txt  setup.cfg
fargo_data_process/: add_beam_noise_disks.py  add_noise_disks.py  add_v_los_noise.py  config.py  fargoData.py  fargo_collect_outputs.py  fargo_collect_xarrays.py  fargo_outputs2fancy_plot.py  fargo_outputs2fancy_plot_2.py  fargo_outputs2frames.py  fargo_outputs2gap_evolution.py  fargo_outputs2grid_npz.py  fargo_outputs2mat.py  fargo_outputs2movie.py  fargo_outputs2movie2.py  fargo_outputs2npz.py  fargo_outputs2radial_movie.py  fargo_outputs2radial_plot.py  fargo_outputs2variance.py  fargo_outputs2xarray.py  mask_disks.py  random_mask_disks.py  rotate_and_stretch_disks.py  rotate_disks.py  test_fargoData.py  uniform_mask_disks.py  uniform_mask_disks_radial.py  utils.py  v_los_disks.py
fargo_utils/: boundary.py  config.py  fargo_run.py  fargo_setups.py  ic.py  opt.py  par.py  planet.py  read_config.py
fargo_utils/setup_base/: __init__.py  boundaries.txt  setup.par
fargo_utils/setup_base/condinit/: fung.c  keplerian_ring.c  static_ring.c
fargo_utils/setup_base/opt/: base.opt
tests/: test_boundary.py  test_config.py  test_fargoData.py  test_fargo_run.py  test_mask_disks.py  test_opt.py  test_par.py  test_planet.py  test_read_config.py
tests/data/: fargo.bound.pkl  lines.pkl  variables.par  variables.pkl
