[metadata]
name = fargo_utils
version = 0.4
author = Shunyuan Mao
author_email = symao@uvic.ca
description = A package for communicating with fargo3d in Python
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages =
    fargo_utils
    fargo_utils.setup_base
    fargo_utils.setup_base.condinit
    fargo_utils.setup_base.opt
    fargo_data_process
python_requires = >=3.7
install_requires =
    numpy >= 1.21.1
    scipy >= 1.7.1
    matplotlib >= 3.4.3
    scikit-image >= 0.18.2
    xarray >= 2022.3.0
    PyYAML >= 5.4.1
include_package_data = True
